--- a/static/game.html
+++ b/static/game.html
@@ -254,8 +254,8 @@
 </body>
 
 <script>
-  var DEBUG_EVENTS = true;
-  var DEBUG_SESSION = true;
+//   var DEBUG_EVENTS = true;
+//   var DEBUG_SESSION = true;
 </script>
 
 <script src="main.js"></script>
