--- a/static/index.html
+++ b/static/index.html
@@ -193,12 +193,12 @@
   <div id="pregame">
       <div class="button-container" id="join-container">
         <label for="join">Join an existing game</label>
-        <input type="text" placeholder="Game code, eg abc123de"></input>
-        <button name="join">Join</button>
+        <input id="code-input" type="text" placeholder="Game code, eg abc123de"></input>
+        <button id="join-button" name="join">Join</button>
       </div>
       <div class="button-container" id="create-container">
         <label for="create">Create a new game</label>
-        <button name="create">Create</button>
+        <button id="create-button" name="create">Create</button>
       </div>
   </div>
 </body>
