--- a/static/game.html
+++ b/static/game.html
@@ -209,10 +209,12 @@
     </div>
     
     <div id="controls">
-        <label for="score">Score</label>
-        <output id="score">1337</output>
-        <label for="lines">Lines</label>
-        <output id="lines">0</output>
+        <label for="score-hero">You</label>
+        <output id="score-hero">1337</output>
+        <label for="score-villian">Them</label>
+        <output id="score-villian">420</output>
+        <label for="level">Level</label>
+        <output id="level">0</output>
         <button id="reset-button" name="reset">New Game</button>
     </div>
 
